feat: add Windows batch script and update README